<resources>
    <string name="app_name">HypnosApp</string>

    <string name="facebook_app_id">1613164835881087</string>
    <string name="fb_login_protocol_scheme">fb1613164835881087</string>
    <string name="facebook_client_token">24e57dfc658850875c93bbc6a35a8566</string>



    <!--Iniciar sesión-->
    <string name="IniciarSesion">Iniciar sesión</string>
    <string name="Email">E-mail</string>
    <string name="contrasenya">Contraseña</string>
    <string name="olvidadoContrasenya">¿Has olvidado tu contraseña?</string>
    <string name="Entrar">Entrar</string>
    <string name="NoTienesUnaCuenta">¿No tienes una cuenta?</string>
    <string name="Registrate">Regístrate</string>

    <!--Pre-inicio de sesión-->
    <string name="Reclamo">Mejora tu descanso</string>
    <string name="HighConcept">Transformamos tus noches en un oasis de descanso de calidad</string>
    <string name="IniciarGoogle">Continuar con Google</string>
    <string name="IniciarFacebook">Continuar con Facebook</string>
    <string name="IniciarCorreo">Continuar con e-mail</string>

    <!--Formulario de registro-->
    <string name="TituloRegistro">Registrarse</string>
    <string name="NombreApellidos">Nombre y apellidos</string>
    <string name="FechaNacimiento">Fecha de nacimiento</string>
    <string name="CreaContrasenya">Crea una contraseña</string>
    <string name="RepiteContrasenya">Repita la contraseña</string>
    <string name="YaTienesUnaCuenta">¿Ya tienes una cuenta?</string>
    <string name="IniciaSesion">Iniciar sesión</string>

    <!--Perfil usuario-->
    <string name="TituloPerfilUsuario">Tu perfil</string>
    <string name="EjemploFecha">10/10/2001</string>
    <string name="EjemploContrasenya">123456</string>
    <string name="ConfirmarCambios">Confirmar cambios</string>
    <string name="CerrarSesion">Cerrar sesión</string>


    <!--Acerca de-->
    <string name="AcercaDe">Acerca de</string>

    <string name="QuienesSomos">¿Quienes somos?</string>

    <!--Footer-->
    <string name="Descanso">Configuración de descanso</string>
    <string name="Inicio">Inicio</string>
    <string name="Preferencias">Preferencias</string>
    <string name="QuienesSomosTexto">Somos un equipo apasionado de profesionales de la salud y
        la tecnología dedicados a mejorar la calidad de vida de las personas a través de un mejor sueño.
        Nos damos cuenta de que el sueño es un componente esencial de la salud y el bienestar,
        y queremos ayudar a quienes luchan con problemas de sueño a recuperar la tranquilidad y el descanso que merecen. </string>

    <string name="NuestraVision">Nuestra visión</string>

    <string name="NuestraVisionTexto">Nuestra visión es crear un mundo en el que todas las personas tengan acceso a una noche de sueño reparador y de calidad.
        Queremos empoderarte para que comprendas mejor tus patrones de sueño y tomes medidas para mejorar tu bienestar general.
        Creemos que el conocimiento es el primer paso para una vida más saludable y estamos comprometidos en proporcionarte herramientas que te permitan tomar el control de tu sueño. </string>

    <string name="PoliticaDePrivacidad">Política de privacidad</string>

    <string name="PoliticaDePrivTexto">En Hypnos, respetamos tu privacidad y estamos comprometidos a proteger tus datos personales.
        No recopilamos información personal a menos que nos la proporciones voluntariamente.
        Utilizamos tu información únicamente para mejorar tu experiencia en la aplicación y brindarte un mejor servicio. No compartiremos tus datos con terceros sin tu consentimiento.
        Puedes leer nuestra política de privacidad completa en nuestra aplicación para obtener más detalles. Tu confianza es importante para nosotros.</string>


    <!--Ajustes de sueño-->
    <string name="AjustesDeSueno">Ajustes de sueño</string>

    <string name="Despertador">Despertador</string>

    <string name="Gradual">Gradual:</string>

    <string name="Automatico">Automático:</string>

    <string name="Tono">Tono:</string>

    <string name="ObjetivosDeDescanso">Objetivos de descanso</string>

    <string name="TiempoDeDescanso">Tiempo de descanso:</string>

    <string name="HoraDeDespertarse">Hora de despertarse:</string>

    <string name="RecibirHora">Recibir notificaciones para recordar la hora de acostarse:</string>

    <string name="Iluminacion">Iluminación</string>

    <string name="Automatico2">Automático:</string>

    <string name="Calidas">Calidas:</string>

    <string name="Blancas">Blancas:</string>

    <!--Confirmar correo-->
    <string name="RepetirCorreo">Repite el correo electrónico:</string>
    <string name="CorreoElectronico">Correo electrónico</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Cancelar">Cancelar</string>

    <!--Cambiar contrasenya-->
    <string name="RepetirContrasenya">Repite la contraseña:</string>
    <string name="EscribirContrasenya">Escribe la nueva contraseña:</string>
    <string name="CambiarContrasenya">Cambiar contraseña</string>

    <!--Reautenticación-->
    <string name="IntroducirCredencialesAntiguas">Introduce tus antiguas credenciales</string>
    <string name="NecesarioIniciarSesion">Por motivos de seguridad, es necesario volver a iniciar sesión:</string>


    <string name="reproduciendo_musica">Reproduciendo Música</string>
    <string name="descripcion_musica">La Guerra de las Galaxias</string>

    <!--Historial-->
    <string name="Desde">Desde</string>
    <string name="Hasta">Hasta</string>
    <string name="Buscar">Buscar</string>
    <string name="ErrorFechas">La fecha inicial no puede ser posterior a la fecha final</string>

    <string name="google_maps_key">YOUR_GOOGLE_MAPS_API_KEY</string>




</resources>