<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/inputEmailReautenticacion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/CorreoElectronico"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        style="@style/TextoInterRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="20dp"
        android:text="@string/RepetirCorreo"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btnAceptarReautenticacion"
        style="@style/EstiloBoton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/Aceptar"
        app:layout_constraintEnd_toEndOf="@+id/inputEmailReautenticacion"
        app:layout_constraintStart_toStartOf="@+id/inputEmailReautenticacion"
        app:layout_constraintTop_toBottomOf="@+id/inputEmailReautenticacion" />

    <Button
        android:id="@+id/btnCancelarReautenticacion"
        style="@style/EstiloBoton.ConBorde"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:text="@string/Cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnAceptarReautenticacion"
        app:layout_constraintStart_toStartOf="@+id/btnAceptarReautenticacion"
        app:layout_constraintTop_toBottomOf="@+id/btnAceptarReautenticacion" />

</androidx.constraintlayout.widget.ConstraintLayout>