<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/respuestaLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:textColor="#972F2F"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/edtEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edtEmail"
        app:layout_constraintTop_toBottomOf="@+id/txt" />

    <TextView
        android:id="@+id/tvCorreo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#972F2F"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/edtEmail"
        app:layout_constraintStart_toStartOf="@+id/edtEmail"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="244dp"
        android:layout_height="178dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logotipo_hypnos" />

    <TextView
        android:id="@+id/txtIniciarSesion"
        style="@style/TextoInterBold.Subtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/IniciarSesion"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewLogo"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/edtEmail"
        style="@style/Inputs"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/colorAzulClaro"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

    <EditText
        android:id="@+id/edtContraseña"
        style="@style/Inputs"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/contrasenya"
        android:inputType="textPassword"
        android:textColorHint="@color/colorAzulClaro"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />


    <TextView
        android:id="@+id/txtOlvidarContraseña"
        style="@style/TextoInterBold"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/olvidadoContrasenya"
        android:textColor="@color/colorAzulPrincipal"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/edtContraseña"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/edtContraseña"
        app:layout_constraintTop_toTopOf="@+id/tvContraseña" />

    <Button
        android:id="@+id/btnIniciarSesion"
        style="@style/EstiloBoton"
        android:layout_width="296dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:onClick="inicioSesionCorreo"
        android:text="@string/Entrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtContraseña" />

    <TextView
        android:id="@+id/txt"
        style="@style/TextoInterRegular"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="128dp"
        android:text="@string/NoTienesUnaCuenta"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtRegistrate"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIniciarSesion" />

    <TextView
        android:id="@+id/txtRegistrate"
        style="@style/TextoInterBold"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/Registrate"
        android:textColor="@color/colorAzulPrincipal"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txt"
        app:layout_constraintTop_toTopOf="@+id/txt"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvContraseña"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#972F2F"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/edtEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edtEmail"
        app:layout_constraintTop_toBottomOf="@+id/edtContraseña" />

</androidx.constraintlayout.widget.ConstraintLayout>
