<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/inputPassNueva"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/contrasenya"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/inputPassRepe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/contrasenya"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView5"
        style="@style/TextoInterRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="20dp"
        android:text="@string/EscribirContrasenya"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        style="@style/TextoInterRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="20dp"
        android:text="@string/RepetirContrasenya"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/inputPassNueva" />


    <Button
        android:id="@+id/btnAceptarCambioContrasenya"
        style="@style/EstiloBoton"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/Aceptar"
        app:layout_constraintEnd_toEndOf="@+id/inputPassRepe"
        app:layout_constraintStart_toStartOf="@+id/inputPassRepe"
        app:layout_constraintTop_toBottomOf="@+id/ojoMostrarOcultarCambioPass" />

    <Button
        android:id="@+id/btnCancelarCambioContrasenya"
        style="@style/EstiloBoton.ConBorde"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:text="@string/Cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnAceptarCambioContrasenya"
        app:layout_constraintStart_toStartOf="@+id/btnAceptarCambioContrasenya"
        app:layout_constraintTop_toBottomOf="@+id/btnAceptarCambioContrasenya" />

    <ImageView
        android:id="@+id/ojoMostrarOcultarCambioPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="Mostrar/Ocultar contraseña"
        android:src="@drawable/ic_visibility_eye_off"
        app:layout_constraintEnd_toEndOf="@+id/inputPassRepe"
        app:layout_constraintTop_toBottomOf="@+id/inputPassRepe" />

    <TextView
        android:id="@+id/textView7"
        style="@style/TextoInterRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="Mostrar contraseña"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/ojoMostrarOcultarCambioPass"
        app:layout_constraintEnd_toStartOf="@+id/ojoMostrarOcultarCambioPass"
        app:layout_constraintTop_toTopOf="@+id/ojoMostrarOcultarCambioPass" />

</androidx.constraintlayout.widget.ConstraintLayout>