<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/colorBlanco">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- HEADER -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include
                android:id="@+id/include"
                layout="@layout/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <!-- FIN DE HEADER -->

        <TextView
            android:id="@+id/acerca_de"
            style="@style/TextoInterBold.Titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/AcercaDe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.056"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraintLayout"
            app:layout_marginEnd="10dp"
            app:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/quienes_somos"
            style="@style/TextoInterBold.Subtitulo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/QuienesSomos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.061"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/acerca_de"
            app:layout_marginEnd="10dp"
            app:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/quienes_somos_texto"
            style="@style/TextoInterRegular.Texto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/QuienesSomosTexto"
            app:layout_constraintBottom_toTopOf="@+id/nuestra_vision_texto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quienes_somos"
            app:layout_constraintVertical_bias="0.176"
            app:layout_marginEnd="10dp"
            app:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/nuestra_vision"
            style="@style/TextoInterBold.Subtitulo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NuestraVision"
            app:layout_constraintBottom_toTopOf="@+id/nuestra_vision_texto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.061"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quienes_somos_texto"
            app:layout_constraintVertical_bias="0.566"
            app:layout_marginEnd="10dp"
            app:layout_marginStart="10dp" />

        <!-- Agrega aquí más elementos según tus necesidades -->

        <!-- FOOTER -->
        <TextView
            android:id="@+id/nuestra_vision_texto"
            style="@style/TextoInterRegular.Texto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="352dp"
            android:layout_marginEnd="16dp"
            android:text="@string/NuestraVisionTexto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraintLayout"
            app:layout_marginEnd="10dp"
            app:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/politica_de_privacidad"
            style="@style/TextoInterBold.Titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/PoliticaDePrivacidad"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.093"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nuestra_vision_texto"
            app:layout_constraintVertical_bias="0.0"
            app:layout_marginEnd="10dp"
            app:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/pol_de_priv_texto"
            style="@style/TextoInterRegular.Texto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/PoliticaDePrivTexto"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/politica_de_privacidad"
            app:layout_constraintVertical_bias="0.0"
            app:layout_marginEnd="10dp"
            app:layout_marginStart="10dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <include
                android:id="@+id/include2"
                layout="@layout/footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <!-- FIN DE FOOTER -->

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
